# competent_formatting

./: Makefile  README.md  pyproject.toml
competent_formatting/: SMILES.py  __init__.py  json.py  misc.py  number_formatting.py  tables.py
competent_formatting/number_formatting/: LaTeX_formats.py  __init__.py  utils.py
competent_formatting/processing/: macro_removal.py
competent_formatting/str_formatting/: __init__.py  str_formatting.py
examples/SMILES/: cutting_SMILES.py
examples/macro_removal/: example.tex  process_example.sh
examples/tables/: simple_table.py
examples/view_with_replacement/: make_table.py  view_table.sh
tests/2025_bigmap_datasets/: SolQuest_extrema_solvation.tex  SolQuest_extrema_total_energy.tex  test_2025_dataset_solvation_tables.py  test_atomization_table.json  test_atomization_table.pkl  test_solvation_table.json  test_solvation_table.pkl
